force-app/main/default/objects/Contact_Point__c/Contact_Point__c.object-meta.xml
<CustomObject>
    <label>Contact Point</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Contact Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Points</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>