force-app/main/default/objects/Contact_Point__c/fields/Integration_Setting__c.field-meta.xml
<CustomField>
    <fullName>Integration_Setting__c</fullName>
    <label>Integration Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>