force-app/main/default/objects/Contact_Point__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>From_Phone__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Account__c</columns>
    <columns>Formatted_Phone_Number__c</columns>
    <columns>Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>